# oikos

./: .gitignore  CONTEXT.md  Cargo.toml  README.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  nightly.yml
docs/: article-conditions-for-emergence.md  c3r-keystone.md  design-mortal-producer-succession.md  engine-divergence.md  experiment-money-circulation.md  finding-household-subsistence.md  game-spec.md  impl-abandonable-norm.md  impl-baker-stage-margin.md  impl-birth-gate-obs.md  impl-birth-stock-saving.md  impl-classes-mobility.md  impl-closed-circulation.md  impl-commitment-norm-spread.md  impl-conflict-political-means.md  impl-credit-cycle.md  impl-cycle-money.md  impl-demand-side-survival-bridge.md  impl-durable-cultivation-capital.md  impl-earned-provisioning.md  impl-endogenous-cultivation-entry.md  impl-endogenous-specialization.md  impl-endowed-inherited-capital.md  impl-entrepreneurial-uncertainty.md  impl-factor-income-rent.md  impl-final-stage-demand.md  impl-firm-enterprise.md  impl-flour-reignition.md  impl-forage-carrying-capacity.md  impl-forward-provisioning.md  impl-g0b.md  impl-g1.md  impl-g2a.md  impl-g2b.md  impl-g2c.md  impl-g2d.md  impl-g3a.md  impl-g3b.md  impl-g4a.md  impl-g4b.md  (+60 more)
econ/: Cargo.toml
econ/src/: agent.rs  agio.rs  arena.rs  bank.rs  barter.rs  bundle.rs  cantillon.rs  capital.rs  command.rs  emergence.rs  expect.rs  factor.rs  good.rs  issuer.rs  (+20 more)
life/: Cargo.toml
sim/: Cargo.toml
viewer/: Cargo.toml
viewer/src/: cli.rs  lib.rs  main.rs  render.rs  scenarios.rs
viewer/tests/: g2d_viewer.rs
world/: Cargo.toml
(+147 files in other folders)
